# mango-dataserver-transport

./: .gitignore  Makefile  README.rst  mango.conf  profile  pyproject.toml
archive/files/: files.conf  image_save.py
archive/fpi/: fpi.conf  relay_fpi.py  ssh_config
archive/sync/: fetch_file  sync.conf  syncfiles.py
etc/: local.conf  test.conf-disable  transportd.conf
groups/mango/: mango.conf  mango.conf-testing
groups/mango/archive/database/: database.conf  store_general.py
groups/mango/archive/files/: files.conf  image_save.py
groups/mango/archive/sync/: list_files  run_remote  s3_helper.py  sync.conf  syncfiles.py
groups/mango/processing/level1/: level1.conf
groups/mango/support/: requirements.txt
groups/mango/support/contrib/uptime-plot/: README  pyproject.toml  uptime_plot.py
processing/: processing.conf  quicklook.py  summary.py
processing/level1/: level1.conf
processing/quicklook/: quicklook.conf  quicklook_base.py  quicklook_daily.py  quicklook_redo.py
processing/stats/: stats.conf  summary.py
support/: requirements.txt
support/contrib/uptime-plot/: setup  uptime_plot.py
support/docs/: format-hdf5.rst  format-png.rst
support/lib/: artemis_data.py  model.py  processing_base.py  processing_daily.py  processing_redo.py
support/lib/sql/: annual_fy25.sql  dailysummary.sql  find_image_island_func.sql  image_islands_span_func.sql  image_islands_view.sql  image_list_func.sql  imagelist-si-func.sql  imagelist-si.sql  imagelist-wrapper.sql  imagelist.sql  total_summary_view.sql  totaldays.sql  totalmovies-new.sql  totalmovies-old.sql  uptime_csv.sql
support/lib/test_data/: mango-mcc01-camera_b-20210723-200200.hdf5
(+29 files in other folders)
